# software_renderer

./: .Makefile.swp  .alternative_render.h.swp  .gitignore  .render.h.swp  .textures.h.swp  .visual_engine.h.swp  :w  ;  CMakeLists.txt  Dockerfile  Makefile  README.md  alternative_render.h  bsp_tree.h  compile.sh  download.sh  fshade  fshade_tree  level.h  main  main.cpp  mohammad.txt  render.h  sector.h  start.sh  test.txt  textures.h  upload.sh  vector.h  visual_engine.h  vshade
deprecated/: player.h  render.h  sector.h
deprecated/software_renderer/: alternative_render.h  edge.h  matrix.h
files/: entities.txt  plot1.bak.txt  plot1.txt  plot11.txt  plot13.txt  plot2.txt  plot3.txt  plot9.txt  scroll_1.txt  scroll_2.txt  scroll_3.txt  scroll_4.txt  scroll_5.txt  scroll_6.txt  scroll_7.txt
gists/: gl.c  line_intersection.c
include/: .entity.hpp.swp  bitmap.h  bootstrapper.hpp  building.hpp  clipmap.hpp  config.h  controls.h  cube.hpp  engine.hpp  entity.hpp  entity_manager.hpp  frame_buffer.hpp  framebuffer_object.h  game_state.hpp  geometry.hpp  graphics.hpp  height_map.hpp  input.hpp  ioc_container.hpp  mesh.hpp  physics.hpp  player.hpp  plot.hpp  plotter.hpp  proctree.hpp  render_object.h  renderer.h  renderer.hpp  rock.hpp  scroll.hpp  shaders.h  sky_dome.hpp  subregion.hpp  terminal.hpp  terrain.hpp  text.hpp  text_editor.hpp  texture.hpp  tree.hpp  vbo_indexer.h  (+4 more)
libs/libpng-1.6.30/: Makefile  config.h  config.status  libpng16-config  libpng16.pc  libtool  png-fix-itxt  pngcp  pngfix  pngimage  pnglibconf.c  pngstest  pngtest  pngunknown  pngvalid
libs/libpng-1.6.30/.deps/: png.Plo  pngerror.Plo  pngget.Plo  pngmem.Plo  pngpread.Plo  pngread.Plo  pngrio.Plo  pngrtran.Plo  pngrutil.Plo  pngset.Plo  pngtest.Po  pngtrans.Plo  pngwio.Plo  pngwrite.Plo  pngwtran.Plo  pngwutil.Plo
libs/libpng-1.6.30/.libs/: libpng16.16.dylib  libpng16.la  pngcp  pngfix  pngimage  pngstest  pngtest  pngunknown  pngvalid
libs/libpng-1.6.30/contrib/libtests/.deps/: pngimage.Po  pngstest.Po  pngunknown.Po  pngvalid.Po
libs/libpng-1.6.30/contrib/tools/.deps/: pngcp.Po  pngfix.Po
libs/libpng-1.6.30/intel/.deps/: filter_sse2_intrinsics.Plo  intel_init.Plo
libs/libpng-1.6.30/mips/.deps/: filter_msa_intrinsics.Plo  mips_init.Plo
libs/libpng-1.6.30/powerpc/.deps/: filter_vsx_intrinsics.Plo  powerpc_init.Plo
main.dSYM/Contents/Resources/DWARF/: main
meshes/: Linear Algebra.ipynb  book_stand.blend  book_stand.mtl  platform.mtl  scroll.blend  scroll.mtl  sculpture.blend  sculpture.blend1
notebooks/: Linear Regression with Linear Algebra.ipynb  Untitled.ipynb  collision.html  planning.ipynb
notebooks/.ipynb_checkpoints/: planning-checkpoint.ipynb
opengl_test/: Makefile  main
res/: basic_level.blend  medium_terrain.blend  medium_terrain.blend1  skydome.blend  skydome.blend1  terrain.blend  terrain.blend1
shaders/: .fshade_normals.swp  .fshade_water.swp  .vshade_normals.swp  .vshade_static_screen.swp  .vshade_water.swp  f_building  f_cube  f_intersect  f_lines  f_mask  f_object  f_painting  f_plot  f_screen  f_sky  f_terminal  f_terrain  f_text  f_water  fshade  fshade2  fshade_normals  fshade_rock  fshade_sky  fshade_static_screen  fshade_terrain  fshade_test  fshade_tree  fshade_twig  fshade_water  g_cube  g_terrain  gshade_rock  gshade_terrain  gshade_test  v_building  v_intersect  v_lines  v_mask  v_painting  (+14 more)
src/: .entity.cpp.swp  .entity_manager.cpp.swp  .frame_buffer.cpp.swp  .main.cpp.swp  .render_object.h.swp  .renderer.h.swp  .water.h.swp  .water_render_object.h.swp  alternative_render.h  bitmap.cpp  bitmap.h  building.cpp  clipmap.cpp  collider.cpp  controls.cpp  controls.h  cube.cpp  cube.h  edge.h  engine.cpp  engine.hpp  entity.cpp  entity_manager.cpp  frame_buffer.cpp  game_state.cpp  geometry.cpp  gradients.h  graphics.cpp  height_map.cpp  input.cpp  main.cpp  matrix.h  mesh.cpp  objloader.cpp  objloader.h  physics.cpp  player.cpp  plot.cpp  plotter.cpp  proctree.cpp  (+27 more)
textures/: twig.psd
tools/: plot_editor.cpp
txt/: scroll_1.txt
